# petrokit

./: .gitignore  Cargo.toml
src/: error.rs  lib.rs  types.rs
src/error/: conversion_error.rs  data_error.rs  export_error.rs  global_error.rs  mod.rs  parse_error.rs  validation_error.rs
src/formats/las/: parse.rs
src/models/: curve.rs  mod.rs  well.rs
src/models/las/: las_parse_result.rs  mod.rs  version_information.rs
tests/: test_day01.rs  test_day02.rs  test_day03.rs  test_main.rs
